# miles

./: README.md  build_conda.sh  pyproject.toml  setup.py  train.py  train_async.py
.github/: CODEOWNERS
.github/workflows/: pr-test.yml  pr-test.yml.j2
docker/: Dockerfile.dev  Dockerfile.rocm  Dockerfile.rocm_MI350-5  Dockerfile_Aug_10_2025_9a48ba0.rocm  Dockerfile_after_c22f55b_Aug_10_2025.rocm  README.md  justfile  version.txt
docs/: README.md  build.sh  build_all.sh  conf.py
docs/en/: index.rst
examples/eval/: README.md  eval_delegate_rollout.py
examples/fully_async/: README.md  fully_async_rollout.py  run-qwen3-4b-fully_async.sh
examples/multi_agent/: README.md  agent_system.py  rollout_with_multi_agents.py  run-qwen3-30B-A3B-multi-agent.sh
examples/openai_format/: __init__.py  dapo_math.py  run-qwen3-4B.sh
examples/reproducibility/: README.md  (+1 more)
miles/ray/: rollout.py  (+6 more)
scripts/: launch-multi-node.sh  launch-p2p-rdma.sh  mooncake_ib_device_map_8gpu.json  run-deepseek-r1.sh  run-glm4-9B-4xgpu-radixtree.sh  run-glm4-9B.sh  run-glm4.5-355B-A32B.sh  run-llama3.2-3B-Instruct-amd.sh  run-mimo-7B-rl-eagle.sh  run-qwen3-235B-A22B-Instruct-2507-amd.sh  run-qwen3-235B-A22B-Instruct-2507-p2p.sh  run-qwen3-235B-A22B-sft.sh  run-qwen3-235B-A22B.sh  run-qwen3-30B-A3B-p2p.sh  run-qwen3-30B-A3B.sh  run-qwen3-32B-amd.sh  run-qwen3-32B.sh  run-qwen3-4B-amd-2node-colocate.sh  run-qwen3-4B-amd-2node-disagg.sh  run-qwen3-4B-amd-3node-1train-2rollout.sh  run-qwen3-4B-amd-3node-2train-1rollout.sh  run-qwen3-4B-amd.sh  run-qwen3-4B-base-sft.sh  run-qwen3-4B.sh  run-qwen3-4B_4xgpu-radixtree.sh  run-qwen3-4B_4xgpu.sh  run-qwen3-8B-amd.sh  run-qwen3-coder-480B-A35B-amd.sh  run_glm5_744b_a40b.py  run_qwen3_4b_fsdp.py
tests/: command_utils.py  test-qwen2.5-0.5B-gsm8k-async.sh  test-qwen2.5-0.5B-gsm8k.sh  test_quick_start_glm4-9B.sh  test_qwen3-0.6B_fsdp_colocated_2xGPU.sh  test_qwen3-0.6B_fsdp_distributed.sh  test_qwen3_0.6B_megatron_fsdp_align.py  test_qwen3_5_mtp_bridge_mapping.py
tools/: convert_hf_to_torch_dist.py  convert_to_hf.py  convert_torch_dist_to_hf.py
(+154 files in other folders)
